--- a/webapp/css/index.css
+++ b/webapp/css/index.css
@@ -52,31 +52,30 @@ body{
 #columnchart{
   display:none;
   position:fixed;
-  left:75%;
-  top:5%;
+  right: 0.5%;
+  top:11%;
 }
 #dados{
-border: 1px solid dark-grey;
-padding-left: 10px;
-padding-top: 10px;
-background-color: #fff;
-opacity: 0.8;
-width:455px;
-height:105px;
-display:none;
-position:fixed;
-left:2%;
-top:5%;
-font-size: 20px;
-font-weight: bold;
-margin-top: 80px;
+  border: 1px solid dark-grey;
+  padding-left: 10px;
+  padding-top: 10px;
+  background-color: #fff;
+  opacity: 0.8;
+  width:455px;
+  height:155px;
+  display:none;
+  position:fixed;
+  left:0.5%;
+  top:12%;
+  font-size: 20px;
+  font-weight: bold;
 }
 #conteudo{
   padding-left: 5px;
   border-radius: 20px;
   border: 3px solid black;
   width:300px;
-  height:100px;
+  height:180px;
   display:none;
   position: absolute;
   float: left;
