--- a/webapp/css/index.css
+++ b/webapp/css/index.css
@@ -82,7 +82,7 @@ font-size: 20px;
 font-weight: bold;
 margin-top: 80px;
 }
-#conteudo{ /*Configuração da mensagem do cursor*/
+#conteudo{ /*Configuração da mensagem que segue o cursor*/
   padding-left: 5px;
   border-radius: 20px;
   border: 3px solid black;
